# ScheduleCheck

./: .gitignore  README.md  requirements.txt  setup.cfg
.circleci/: config.yml
reference/: method1_ref.txt  method2_ref.txt
src/schedulecheck/: __init__.py  meetinglib.py  test_meetinglib.py
