[metadata]
name = schedulecheck 
version = 1.0.0
author = Yi-Cheng Teng
author_email = clouden90@hotmail.com
description = check conflictling appointments
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/clouden90/schedulecheck"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
  flake8
  pytest
  pytest-cov

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  schedulecheck = schedulecheck.bin.schedulecheck:main
